# acecode

./: .gitignore  .gitmodules  CMakeLists.txt  README_CN.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: package.yml
docs/: model-context-resolution.md
ports/ftxui/: portfile.cmake  vcpkg.json
src/: agent_loop.cpp  agent_loop.hpp  tui_state.hpp
src/auth/: github_auth.cpp  github_auth.hpp
src/commands/: builtin_commands.cpp  builtin_commands.hpp  command_registry.cpp  command_registry.hpp  compact.cpp  compact.hpp  configure.cpp
src/config/: config.cpp  config.hpp
src/desktop/: main.cpp  web_host.cpp
src/provider/: copilot_provider.cpp  copilot_provider.hpp  llm_provider.hpp  model_context_resolver.cpp  model_context_resolver.hpp  openai_provider.cpp  openai_provider.hpp  provider_factory.cpp  provider_factory.hpp  provider_swap.cpp
src/session/: session_manager.cpp  session_registry.cpp
src/tool/: bash_tool.cpp  bash_tool.hpp  tool_executor.cpp  tool_executor.hpp
src/utils/: token_tracker.cpp  token_tracker.hpp
web/src/: App.jsx
web/src/components/: ChatView.jsx  PermissionModal.jsx  Sidebar.jsx
web/src/lib/: desktopContextMenu.js  runTests.js  slashCommandWorkspace.js  slashCommandWorkspace.test.js
web/src/styles/: globals.css
